# plato-tabletalk

./: Cargo.toml  LICENSE  README.md  Settings.toml
.github/workflows/: build.yml
src/: args.rs  client.rs  main.rs  plato.rs  settings.rs
